# pyhalo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
benchmarks/: benchmark_graph.py  benchmark_speed.py
docs/: README.md  architecture.md  complexity.md  dilated_connections.md  flash_attention.md  global_tokens.md  gqa.md  local_attention.md  rope.md  sparse_attention.md
halo/: __init__.py  hub.py
halo/attention/: __init__.py  global_attention.py  graph.py  halo_attention.py
halo/core/: __init__.py  config.py  device.py  logging.py
halo/datasets/: __init__.py  jsonl.py  streaming.py  synthetic.py  text.py
halo/generation/: __init__.py  samplers.py
halo/models/: __init__.py  baseline_model.py  halo_model.py
halo/nn/: __init__.py  feed_forward.py  halo_block.py  rope.py
halo/tokenizers/: __init__.py  base.py  char.py  sentencepiece.py  word.py
halo/training/: __init__.py  trainer.py
halo/utils/: __init__.py  benchmarks.py  metrics.py  random.py
notebooks/: app.py  halo_v2_70m_benchmark.ipynb  halo_vs_transformer_benchmark.ipynb  halo_vs_transformer_large.ipynb
scripts/: exp1_baseline.py  exp2_ablation.py  exp3_long_context.py
tests/: test_attention.py  test_checkpoint.py  test_config.py  test_generation.py  test_gradients.py  test_graph.py  test_memory.py  test_model.py  test_shapes.py  test_tokenizers.py  test_training.py
